@@ -1,3 +1,4 @@
+* Don't use Array splat in Regex comparisons in Package [cody]
 * Default the Location to use the :alpha2 country code format [cody]
 * Add configurable timeouts from Active Merchant [cody]
 * Update xml_node.rb from XML Node [cody]
